couple of eventlisteners + visibility issue done

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 1s, opacity 1s linear;
 }
 
 @media screen and (max-width: 499px) {
